# calculator

./: .gitignore  Makefile  Tupfile  compare.py  leviGUIcode  levicode  libload.py  main.py  test_lib.py
.tup/: db
operations/: CMakeLists.txt  eval.cpp  lib.rs  main.cpp
test/: bindings.hpp  libload.cpp  libload.h  main.cpp
